[package]
name = "asdot"
version = "0.4.0"
edition = "2024"
description = "RFC 5396-compliant Autonomous System Number (ASN) parsing and formatting"
license = "MIT"
repository = "https://github.com/rcullito/asdot"
keywords = ["asn", "bgp", "network", "asdot", "asdot-plus"]
categories = ["embedded", "network-programming", "no-std", "no-std::no-alloc"]

[dependencies]
serde = { version = "1.0.228", optional = true, default-features = false }

[dev-dependencies]
serde_test = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(docsrs)"] }
