[package]
name = "asdot"
version = "0.4.2"
edition = "2021"
description = "RFC 5396-compliant Autonomous System Number (ASN) parsing and formatting"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rcullito/asdot"
keywords = ["asn", "bgp", "network", "asdot", "asdot-plus"]
categories = ["embedded", "network-programming", "no-std", "no-std::no-alloc"]
rust-version = "1.81"

[dependencies]
serde = { version = "1", optional = true, default-features = false }

[dev-dependencies]
serde_test = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(docsrs)"] }
